Legislator detail views, final core view structure, view event routing.

--- a/fatcatmap/assets/js/templates/detail.html
+++ b/fatcatmap/assets/js/templates/detail.html
@@ -1,1 +1,1 @@
-<div v-view="{{ kind }}" v-if="kind" v-cloak></div>
+<section id="map_detail" v-view="view" v-with="selected" v-if="selected" v-ref="detail" v-transition></section>
