--- a/fatcatmap/assets/js/templates/page.html
+++ b/fatcatmap/assets/js/templates/page.html
@@ -3,4 +3,4 @@
   <div v-component="stage"></div>
 </div>
 
-<section v-component="modal" v-with="modal" v-if="modal" v-ref="modal" v-transition></section>
+<section v-component="modal"></section>
