--- a/fatcatmap/assets/js/templates/stage.html
+++ b/fatcatmap/assets/js/templates/stage.html
@@ -3,8 +3,9 @@
   <section class="main">
 
     <section id="mapper" v-if="active" v-transition>
-      <div v-component="map" v-ref="map"></div>
+      <div v-component="map"></div>
     </section>
 
   </section>
+
 </section>
