Mapper View & initial detail view routing. Graph service coming soon!

--- a/fatcatmap/assets/js/templates/stage.html
+++ b/fatcatmap/assets/js/templates/stage.html
@@ -1,11 +1,7 @@
 <section id="stage" class="stage" v-ref="stage">
 
   <section class="main">
-
-    <section id="mapper" v-if="active" v-transition>
-      <div v-component="map"></div>
-    </section>
-
+      <div v-view="page"></div>
   </section>
 
 </section>
