Add initial grapher work. Add working sourcemaps for JS and Less. Upgrade npm dependencies.

--- a/fatcatmap/assets/js/templates/detail.html
+++ b/fatcatmap/assets/js/templates/detail.html
@@ -1,1 +1,1 @@
-<section id="map_detail" v-view="view" v-with="selected" v-if="selected" v-ref="detail" v-transition></section>
+<section id="map_detail" v-view="view" v-with="selected" v-ref="detail" v-transition></section>
