--- a/fatcatmap/assets/js/templates/modal.html
+++ b/fatcatmap/assets/js/templates/modal.html
@@ -1,1 +1,1 @@
-<div v-view="modal.view" v-with="modal" v-if="modal" v-ref="modal" v-transition></div>
+<div v-view="modal.view" v-with="modal" v-ref="modal" v-transition></div>
