FCM-21, FCM-27: Add initial graph interaction. Modify graph service to handle updates to the graph. Working mapper!

--- a/fatcatmap/assets/js/templates/header.html
+++ b/fatcatmap/assets/js/templates/header.html
@@ -1,3 +1,3 @@
-<div id="header" style="color: #dddddd" v-ref="header">
+<header id="header" style="color: #dddddd" v-ref="header">
   <h1>i am header</h1>
-</div>
+</header>
