--- a/fatcatmap/assets/js/templates/page.html
+++ b/fatcatmap/assets/js/templates/page.html
@@ -1,4 +1,4 @@
-<div id="page" class="page container" v-on="click: route" v-if="active" v-transition>
+<div id="page" class="page container" v-on="click: route">
   <div v-component="header"></div>
   <div v-component="stage"></div>
 </div>
