--- a/fatcatmap/assets/sass/var/_color.sass
+++ b/fatcatmap/assets/sass/var/_color.sass
@@ -19,3 +19,10 @@ $heading-color: inherit
 
 $logo-gradient-start: rgba(242,242,24,0.88) 0%
 $logo-gradient-end: rgba(119,215,29,0.88) 100%
+
+$node-fill-color: #ddd
+$node-stroke-color: #ddd
+
+$democrat-stroke-color: #1A6CAC
+$republican-stroke-color: #AB1820
+$contributor-stroke-color: #09B01C
