--- a/fatcatmap/assets/sass/component/_map.sass
+++ b/fatcatmap/assets/sass/component/_map.sass
@@ -1,20 +1,21 @@
 @import "mixin/layout"
 @import "core/transition"
+@import "var/color"
+@import "var/struct"
 
-$node-fill: #ddd
-$node-stroke: #ddd
-$node-stroke-width: 4px
 
-$democrat-stroke: #1A6CAC
-$republican-stroke: #AB1820
+$node-stroke-width: 6px
+$node-scale-factor: 1.6
 
-#map
+#mapper
   +fillbox
-  z-index: 500
-  +v-fade-in()
 
 #catnip
   +stretchbox
+
+#map
+  z-index: 500
+  +transition(opacity 0.5s ease)
 
 // Nodes/edges
 circle
@@ -25,32 +26,33 @@ svg svg, .node,
   cursor: pointer
 
 .node
-  fill: $node-fill
-  stroke: $node-stroke
-  stroke-opacity: .8
+  fill: $node-fill-color
+  stroke: $node-stroke-color
+  stroke-opacity: 1
   stroke-width: $node-stroke-width
+  +transition-property(stroke, stroke-width)
+  +transition-duration(0.2s)
+  +transition-ease(ease)
 
-.node-group
-  &.legislator
-    circle
-      stroke-width: $node-stroke-width * 1.5
+  &.selected
+    stroke-width: $node-stroke-width * $node-scale-factor
 
-    &.democrat
-      circle
-        stroke: $democrat-stroke
+circle
+  @each $type in $nodetypes
+    &.#{nth($type, 1)}
+      stroke: nth($type, 2)
+      &.selected
+        stroke: lighten(nth($type, 2), 15%)
 
-    &.republican
-      circle
-        stroke: $republican-stroke
+  &.senate,
+  &.corporate
+    stroke-width: $node-stroke-width * 1.2
+    &.selected
+      stroke-width: $node-stroke-width * 1.2 * $node-scale-factor
 
 .link
   cursor: pointer
   stroke-opacity: .6
 
-.congress
-  stroke-width: $node-stroke-width * 1.75
-
-.senate
-  stroke-width: $node-stroke-width * 2.25
 
 @import "component/detail"
