--- a/fatcatmap/assets/sass/mixin/_transition.sass
+++ b/fatcatmap/assets/sass/mixin/_transition.sass
@@ -20,3 +20,7 @@
 =transition-duration($t: $transition-duration)
   transition-duration: $t
   -webkit-transition-duration: $t
+
+=transition-ease($ease: $transition-ease)
+  transition-timing-function: $ease
+  -webkit-transition-timing-function: $ease 
