FCM-18, FCM-41: Routed detail & compare views, base login page. Needs some...polish.

--- a/fatcatmap/assets/js/templates/compare.html
+++ b/fatcatmap/assets/js/templates/compare.html
@@ -1,5 +1,5 @@
-<section id="map_detail" v-ref="detail" v-transition>
-  <div class="close">
+<section id="map_compare" v-ref="compare" v-transition>
+  <div class="l-close">
     <span v-on="click: close">x</span>
   </div>
   <div v-if="kind">
