--- a/fatcatmap/assets/js/templates/modal.html
+++ b/fatcatmap/assets/js/templates/modal.html
@@ -1,1 +1,6 @@
-<div v-view="modal.view" v-with="modal" v-ref="modal" v-transition></div>
+<div class="close">
+  <span v-on="click: close">x</span>
+</div>
+<div class="content">
+  <div v-view="modal.viewname" v-with="modal.data" v-ref="modal"></div>
+</div>
