--- a/fatcatmap/assets/sass/catnip.sass
+++ b/fatcatmap/assets/sass/catnip.sass
@@ -1,8 +1,19 @@
-@import "layout/grid"
-@import "core/transition"
+
 @import "core/common"
+@import "core/transition"
 @import "component/map"
+@import "component/modal"
+@import "layout/grid"
 
 .main
   margin: 0 auto
 
+.content
+  padding: 10px
+
+#header
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  z-index: 9999
