--- a/fatcatmap/assets/sass/component/_detail.sass
+++ b/fatcatmap/assets/sass/component/_detail.sass
@@ -1,11 +1,16 @@
 @import "var/color"
 @import "mixin/transition"
 
-#map_detail
+#map_detail, #map_compare
   position: fixed
-  left: 0
   bottom: 15%
   height: 70%
   width: 21%
   background-color: $grey-light
   +v-transition(width, 0%, 0.2s)
+
+#map_detail
+  left: 0
+
+#map_compare
+  right: 0
