--- a/fatcatmap/assets/sass/core/_common.sass
+++ b/fatcatmap/assets/sass/core/_common.sass
@@ -12,6 +12,30 @@ $logo-slant: 45deg
 .transparent
   opacity: 0
 
+.close, .l-close
+  margin-top: 6px
+  margin-bottom: 0
+  line-height: 1
+  color: $grey-dark
+  cursor: pointer
+
+  & > span
+    font-weight: 200
+    font-size: 26px
+
+  &:hover
+    color: $grey
+
+.close
+  float: right
+  margin-right: 12px
+  margin-left: 0
+
+.l-close
+  float: left
+  margin-right: 0
+  margin-left: 12px
+
 .fcm-pre
   font-family: "fcm"
   speak: none
