FCM-72, FCM-73, FCM-74: Service refactor & parity.
- Commit final refactor of service injection v.1.
- Commit final refactor of view architecture v.1.
- Commit final sass ports to bring to style parity.
- Remove less-based stylesheet from base template.
- Commit drafts of detail view, node interaction, login view.

--- a/fatcatmap/assets/js/templates/detail/legislator.html
+++ b/fatcatmap/assets/js/templates/detail/legislator.html
@@ -1,10 +1,10 @@
-<div id="detail-{{key}}" class="{{class}}" data-kind="{{kind | lowercase}}">
+<div id="detail-{{key}}" data-kind="{{kind | lowercase}}">
   <section class="byline">
     <h2>{{firstname}} {{lastname}}</h2>
-    <h3>{{office}}, {{state}}<span v-if="district">-{{district}}</span></h3>
+    <span>{{node_key}}</span>
   </section>
 
   <section class="portrait">
-    <img class="{{kind | lowercase}} govtrack thumbnail" alt="{{title}}. {{firstname}} {{lastname}} [{{state}}]" src="{{portrait_url}}" />
+    <img class="{{kind | lowercase}} govtrack thumbnail" alt="{{firstname}} {{lastname}}" width="50" height="50"/>
   </section>
 </div>
