--- a/fatcatmap/assets/js/templates/page/login.html
+++ b/fatcatmap/assets/js/templates/page/login.html
@@ -1,3 +1,21 @@
-<div id="login">
-  hello i am login
+<div id="login" class="gridrow">
+
+  <div id="service_signin" class="col4">
+    <h4>sign in with:</h4>
+    <ul>
+      <li>facebook <span class="icon-facebook"></span></li>
+      <li>google <span class="icon-google"></span></li>
+    </ul>
+  </div>
+
+  <div id="signup" class="col7">
+    <h4>or enter your info to sign up or log in:</h4>
+    <input type="email" id="signup_email" class="email" placeholder="you@youmail.com">
+    <input type="password" id="signup_password" class="password" placeholder="password">
+    <div class="center text-center">
+      <button id="signup_submit">sign up</button>
+      <button id="signin_submit">sign in</button>
+    </div>
+  </div>
+
 </div>
