--- a/fatcatmap/assets/js/templates/page/map.html
+++ b/fatcatmap/assets/js/templates/page/map.html
@@ -8,13 +8,12 @@
       </defs>
 
       <svg id="map" class="transparent" v-on="
-        click : select,
+        click : viewDetail,
         dblclick: browseTo,
         dragstart: startDrag,
         dragend: endDrag
       "></svg>
   </svg>
 
-  <section v-component="detail" v-if="map.detail"></section>
-  <section v-component="compare" v-if="map.compare"></section>
+  <section v-component="detail"></section>
 </section>
