--- a/fatcatmap/assets/sass/mixin/_transition.sass
+++ b/fatcatmap/assets/sass/mixin/_transition.sass
@@ -5,8 +5,8 @@
   -webkit-transition: $transitions
 
 
-=v-transition($prop, $initial, $t: $transition-duration, $ease: $transition-ease)
-  +transition($prop $t $ease)
+=v-transition($prop, $initial, $t: $transition-duration, $ease: $transition-ease, $delay: $transition-delay)
+  +transition($prop $t $ease $delay)
 
   &.v-enter, &.v-leave
     #{$prop}: $initial
@@ -16,7 +16,6 @@
   transition-property: $props
   -webkit-transition-property: $props
 
-
 =transition-duration($t: $transition-duration)
   transition-duration: $t
   -webkit-transition-duration: $t
@@ -24,3 +23,7 @@
 =transition-ease($ease: $transition-ease)
   transition-timing-function: $ease
   -webkit-transition-timing-function: $ease 
+
+=transition-delay($delay: $transition-delay)
+  transition-delay: $delay
+  -webkit-transition-delay: $delay 
