--- a/fatcatmap/assets/sass/var/_font.sass
+++ b/fatcatmap/assets/sass/var/_font.sass
@@ -6,6 +6,8 @@ $serif: Georgia, "Times New Roman", Times, serif
 $ideal: "Ideal Sans SSm A", "Ideal Sans SSm B"
 $ideal-heading: "Ideal Sans A", "Ideal Sans B"
 
+$fcm: "fcm"
+
 $font-weight-lighter: 100
 $font-weight-light: 200
 $font-weight-base: 400
