--- a/fatcatmap/templates/source/core/__base.html
+++ b/fatcatmap/templates/source/core/__base.html
@@ -25,7 +25,7 @@
 
     <!-- stylesheets -->
     {%- block stylesheets %}
-    <link rel="stylesheet" href="/assets/style/themes/scaffold/home.css" type="text/css">
+<!--     <link rel="stylesheet" href="/assets/style/themes/scaffold/home.css" type="text/css"> -->
     <link rel="stylesheet" href="/assets/style/catnip.css" type="text/css">
     <link rel="stylesheet" href="//cloud.typography.com/6717292/775624/css/fonts.css" type="text/css">
     {% endblock %}
