--- a/fatcatmap/assets/js/templates/detail.html
+++ b/fatcatmap/assets/js/templates/detail.html
@@ -1,8 +1,17 @@
-<section id="map_detail" v-ref="detail" v-transition>
-  <div class="close">
-    <span v-on="click: close">x</span>
+<section id="detail" v-ref="detail">
+
+  <div id="detail_left" class="detail" v-if="left" v-transition>
+    <div class="close">
+      <span v-on="click: close">x</span>
+    </div>
+    <div class="view" v-view="leftview" v-with="left.native" v-transition></div>
   </div>
-  <div v-if="kind">
-    <div v-view="kind"></div>
+
+  <div id="detail_right" class="detail" v-if="right" v-transition>
+    <div class="close close-left">
+      <span v-on="click: close">x</span>
+    </div>
+    <div class="view" v-view="rightview" v-with="right.native" v-transition></div>
   </div>
+
 </section>
