--- a/fatcatmap/assets/sass/var/_color.sass
+++ b/fatcatmap/assets/sass/var/_color.sass
@@ -12,8 +12,8 @@ $brand-info: #5bc0de
 $brand-warning: #f0ad4e
 $brand-danger: #d9534f
 
-$link-color: $brand-primary
-$link-color-hover: darken($link-color, 15%)
+$link-color: darken($brand-primary, 15%)
+$link-color-hover: $brand-primary
 
 $heading-color: inherit
 
