--- a/fatcatmap/assets/sass/catnip.sass
+++ b/fatcatmap/assets/sass/catnip.sass
@@ -1,6 +1,6 @@
 @import "var/font"
 @import "var/color"
-@import "core/font"
+@import "core/icon"
 @import "core/common"
 @import "core/transition"
 @import "component/map"
