--- a/fatcatmap/assets/sass/component/_modal.sass
+++ b/fatcatmap/assets/sass/component/_modal.sass
@@ -2,15 +2,23 @@
 @import "var/color"
 
 #modal
+  z-index: 9000
   position: fixed
   width: 60%
   height: 60%
   left: 20%
   top: 20%
+  display: flex
+  align-items: stretch
+  align-content: stretch
+  flex-direction: column
+  justify-content: center
   background-color: $grey-light
-  z-index: 9000
   opacity: 1
-  transition: top 0.15s ease, opacity 0.15s ease
+  +transition(top 0.15s ease, opacity 0.15s ease)
+
+  & > div
+    flex-grow: 10
   
   &.v-enter, &.v-leave
     top: 0%
