--- a/fatcatmap/assets/sass/core/_icon.sass
+++ b/fatcatmap/assets/sass/core/_icon.sass
@@ -16,6 +16,24 @@
   line-height: 1
   -webkit-font-smoothing: antialiased
 
+  &.largest
+    font-size: $font-size-h1
+
+  &.larger
+    font-size: $font-size-h2
+
+  &.large
+    font-size: $font-size-h3
+
+  &.medium
+    font-size: $font-size-h4
+
+  &.small
+    font-size: $font-size-h5
+
+  &.smallest
+    font-size: $font-size-h6
+
 .icon-cathead:before
   content: "\e600"
 
