--- a/fatcatmap/assets/js/templates/layout/header.html
+++ b/fatcatmap/assets/js/templates/layout/header.html
@@ -1,8 +1,7 @@
 <header id="header" v-ref="header">
 
   <div id="header_action" class="right">
-    <h2 class="login" href="/login" data-route>login</h2>
-    <h2 class="signup" href="/login" data-route>sign up</h2>
+    <h2 class="signup" href="/login" data-route>sign up &amp; login</h2>
   </div>
 
   <div id="logo_main">
