--- a/fatcatmap/assets/js/templates/modal.html
+++ b/fatcatmap/assets/js/templates/modal.html
@@ -1,7 +1,7 @@
-<div class="close">
+<div class="close close-right">
   <span v-on="click: close">x</span>
 </div>
 
-<div class="content">
+<div class="content gridcol-stretch">
   <div v-view="modal.viewname" v-with="modal.data" v-ref="modal"></div>
 </div>
