--- a/fatcatmap/assets/sass/layout/_grid.sass
+++ b/fatcatmap/assets/sass/layout/_grid.sass
@@ -1,17 +1,40 @@
 @import "var/layout"
 @import "mixin/grid"
 
-.gridrow
-  position: relative
-  width: 100%
+[class*="gridrow"], [class*="gridcol"]
+  display: flex
+  align-content: stretch
 
-  [class^="col"]
-    float: left
-    padding-left: $gutter-width
-
-    &:last-child
-      padding-right: $gutter-width
+[class*="gridrow"]
+  flex-direction: row
+  justify-content: space-around
 
   @for $i from 1 through $columns
-    .col#{$i}
+    & > .col#{$i}
       +column-span($i)
+
+.gridrow
+  align-items: center
+
+.gridrow-stretch
+  align-items: stretch
+
+.gridrow-start
+  align-items: flex-start
+
+[class*="gridcol"]
+  flex-direction: column
+  justify-content: center
+
+  @for $i from 1 through $rows
+    & > .row#{$i}
+      +row-span($i)
+
+.gridcol
+  align-items: center
+
+.gridcol-stretch
+  align-items: stretch
+
+.gridcol-start
+  align-items: flex-start
