--- a/fatcatmap/assets/sass/var/_animation.sass
+++ b/fatcatmap/assets/sass/var/_animation.sass
@@ -1,5 +1,5 @@
 
-@keyframes rotate
+@-webkit-keyframes rotate
   0%
     transform: rotate(0deg)
   50%
@@ -7,7 +7,7 @@
   100%
     transform: rotate(360deg)
 
-@keyframes fade
+@-webkit-keyframes fade
   0%
     opacity: 0
   25%
@@ -18,3 +18,11 @@
     opacity: .75
   100%
     opacity: 1
+
+@-webkit-keyframes headshake
+  0%, 25%, 50%, 75%, 100%
+    left: 0px
+  12.5%, 62.5%
+    left: -2px
+  37.5%, 87.5%
+    left: 2px
