--- a/fatcatmap/assets/sass/var/_color.sass
+++ b/fatcatmap/assets/sass/var/_color.sass
@@ -4,7 +4,8 @@ $grey-darker: lighten(#000, 13.5%)
 $grey-dark: lighten(#000, 20%)
 $grey: lighten(#000, 33.5%)
 $grey-light: lighten(#000, 60%)
-$grey-lighter: lighten(#000, 90%)
+$grey-lighter: lighten(#000, 68%)
+$grey-lightest: lighten(#000, 90%)
 
 $brand-primary: #428bca
 $brand-success: #5cb85c
@@ -26,3 +27,5 @@ $node-stroke-color: #ddd
 $democrat-stroke-color: #1A6CAC
 $republican-stroke-color: #AB1820
 $contributor-stroke-color: #09B01C
+
+$transparent: transparent
