Promote validation to directive, router & other cleanup.

--- a/fatcatmap/assets/js/templates/page/login.html
+++ b/fatcatmap/assets/js/templates/page/login.html
@@ -23,8 +23,8 @@
     <div class="col8 gridcol-stretch">
       <div class="row8">
         <h3>or enter your info below:</h3>
-        <input type="email" id="email" class="email" placeholder="you@youmail.com" v-model="email">
-        <input type="password" id="password" class="password" placeholder="password" v-model="password">
+        <input type="email" id="email" placeholder="you@youmail.com" v-model="email" v-validate="email">
+        <input type="password" id="password" placeholder="password" v-model="password">
       </div>
     </div>
 
