FCM-21, FCM-27: Browseable map works! Adds footer & fixes logo.

--- a/fatcatmap/assets/sass/catnip.sass
+++ b/fatcatmap/assets/sass/catnip.sass
@@ -8,6 +8,7 @@
 @import "component/login"
 @import "layout/grid"
 @import "layout/header"
+@import "layout/footer"
 
 body
   background-color: $grey-dark
@@ -30,9 +31,5 @@ a
 .content
   padding: 10px
 
-#header
-  position: fixed
-  top: 0
-  left: 0
-  width: 100%
-  z-index: 9999
+#default_action
+  display: none
