--- a/fatcatmap/assets/sass/layout/_header.sass
+++ b/fatcatmap/assets/sass/layout/_header.sass
@@ -3,24 +3,23 @@
 @import "var/layout"
 
 #header
-  height: $header-height
-  position: absolute
-  top: 0
-  left:0
-  right: 0
-
   div
-    line-height: $header-height
+    line-height: normal
 
   h1, h2
+    margin: 0;
     display: inline-block
     vertical-align: middle
     cursor: pointer
-    z-index: 1000
 
-#header_action
+#default_action
+  position: fixed
+  top: 10px
+  right: 0
+  z-index: 9999
+
   h2
-    margin: 0 1.5em 0 0
+    margin-right: 1.5em
     width: 9em
     height: 1.75em
     text-align: center
@@ -39,8 +38,15 @@
 
 
 #logo_main
+  position: fixed
+  top: 10px
+  left: 0
+  z-index: 9999
+
   h1
-    margin: 0 0 0 0.3em
+    margin-left: 12px
+    display: inline-block
+    vertical-align: middle
     color: transparent
     background: linear-gradient($logo-slant, $logo-gradient-start, $logo-gradient-end)
     text-rendering: geometricPrecision
