--- a/fatcatmap/assets/js/templates/detail.html
+++ b/fatcatmap/assets/js/templates/detail.html
@@ -4,14 +4,14 @@
     <div class="close close-right">
       <span v-on="click: close">x</span>
     </div>
-    <div class="view" v-view="leftview" v-with="left.native" v-transition></div>
+    <div class="view" v-view="leftview" v-with="left.data" v-transition></div>
   </div>
 
   <div id="detail_right" class="detail" v-if="right" v-transition>
     <div class="close close-left">
       <span v-on="click: close">x</span>
     </div>
-    <div class="view" v-view="rightview" v-with="right.native" v-transition></div>
+    <div class="view" v-view="rightview" v-with="right.data" v-transition></div>
   </div>
 
 </section>
