--- a/fatcatmap/assets/js/templates/component/autocomplete.html
+++ b/fatcatmap/assets/js/templates/component/autocomplete.html
@@ -1,8 +1,8 @@
-<div class="autocomplete-wrap">
+<div class="autocomplete-wrap" v-ref="autocomplete">
 
   <input type="text" class="input search autocomplete" v-model="query" placeholder="search the graph">
 
-  <div class="autocomplete-result-list" v-if="results" v-on="click: select">
+  <div class="autocomplete-result-list" v-if="results.length" v-on="click: select">
 
     <div class="autocomplete-result" v-repeat="results" data-result-key="{{key}}">
       {{label}}
