--- a/fatcatmap/assets/js/templates/component/autocomplete.html
+++ b/fatcatmap/assets/js/templates/component/autocomplete.html
@@ -2,10 +2,10 @@
 
   <input type="text" class="input search autocomplete" v-model="query" placeholder="search the graph">
 
-  <div class="autocomplete-result-list" v-if="results.length" v-on="click: select">
+  <div class="autocomplete-result-list" v-if="results.length">
 
-    <div class="autocomplete-result" v-repeat="results" data-result-key="{{key}}">
-      {{label}}
+    <div class="autocomplete-result" v-repeat="results">
+      <span v-on="click: select" data-result-key="{{result.encoded}}">{{label}}</span>
     </div>
 
   </div>
