View & template structure refactor.
- Rename modules to correctly reflect directory structure.
- Make detail and modal view components.
- Add current v-ref type declarations for Closure Compiler.

--- a/fatcatmap/assets/js/templates/app.html
+++ b/fatcatmap/assets/js/templates/app.html
@@ -6,4 +6,4 @@
 
 </div>
 
-<div id="modal" v-component="modal" v-if="modal" v-transition></div>
+<div id="modal" v-component="component.modal" v-if="modal"></div>
