--- a/fatcatmap/assets/js/templates/page/map.html
+++ b/fatcatmap/assets/js/templates/page/map.html
@@ -14,7 +14,7 @@
       "></svg>
   </svg>
 
-  <section v-component="detail"></section>
+  <section v-component="component.detail"></section>
 </section>
 
 <section id="map_physics" class="hidden">
