--- a/fatcatmap/assets/js/templates/layout/footer.html
+++ b/fatcatmap/assets/js/templates/layout/footer.html
@@ -1,7 +1,7 @@
 <footer id="footer">
 
   <div id="version">
-    <h1>technology preview - INTERNAL USE ONLY</h1>
+    <h1>technology preview - NOT FOR EXTERNAL RELEASE</h1>
   </div>
 
   <nav id="page_nav">
@@ -9,6 +9,7 @@
       <li><h2 class="footer-nav" href="/terms">terms</h2></li>
       <li><h2 class="footer-nav" href="/privacy">privacy</h2></li>
       <li><h2 class="footer-nav" href="/contact">contact</h2></li>
+      <li><h2>PRIVATE &amp; CONFIDENTIAL</h2></li>
     </ul>
   </nav>
 
