--- a/fatcatmap/assets/sass/component/_map.sass
+++ b/fatcatmap/assets/sass/component/_map.sass
@@ -38,11 +38,7 @@ $leaf-opacity: 0.6
     padding-top: 20px
 
 // Nodes/edges
-circle
-  stroke-linecap: butt
-  stroke-rendering: crispEdges
-
-svg svg, .node,
+svg svg, .node, .link
   cursor: pointer
 
 .node
@@ -61,6 +57,9 @@ svg svg, .node,
   opacity: $leaf-opacity
 
 circle
+  stroke-linecap: butt
+  stroke-rendering: crispEdges
+
   @each $type in $nodetypes
     &.#{nth($type, 1)}
       stroke: nth($type, 2)
@@ -74,7 +73,6 @@ circle
       stroke-width: $node-stroke-width * $node-scale-factor * $node-scale-factor
 
 .link
-  cursor: pointer
   stroke-opacity: .6
 
 
