--- a/fatcatmap/templates/source/layouts/mapper.html
+++ b/fatcatmap/templates/source/layouts/mapper.html
@@ -1,6 +1,21 @@
 {% extends "layouts/base.html" %}
 
-{% block logo -%}<div id='logowrap'><div id='cathead'></div><div class='rs-medium rs-large'><h1 class="logo">fatcatmap</h1></div><div class='rs-small'><h1 class="logo">fcm</h1></div></div><!-- end #logowrap -->{%- endblock %}
+{% block logo -%}<div id='logowrap'><div id='cathead'><svg version="1.1" baseProfile="tiny" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 181.43 178" xml:space="preserve"><g><path fill="#AEBE2F" d="M152.28,0c0.33,0,0.67,0,1,0c0.85,2.14,1.62,4.32,2.55,6.43c6.86,15.48,10.05,31.56,8.63,48.56
+        c-0.85,10.23-3.5,20.16-4.39,30.37c-0.12,1.43-0.95,2.79,0.2,4.28c6.74,8.74,10.81,19.63,21.15,25.61
+        c-9.69,14.15-21.21,25.48-37.6,31.04c-9.74,3.31-15.98,11.21-22.15,18.65c-3.2,3.86-6.26,7.26-10.82,9.04
+        c-4.1,1.59-8.38,2.71-12.58,4.03c-3.67,0-7.33,0-11,0c-12.32-3.02-19.88-12.36-27.5-21.32c-2.26-2.65-4.38-4.6-7.57-5.77
+        c-4.95-1.83-10.8-2.65-14.28-6.63c-4.84-5.52-10.96-9.52-15.83-14.95c-4.54-5.06-10.05-8.93-16.74-10.83
+        c-0.07-9.76,8.82-13.05,13.67-19.05c-5.25-4.37-5.07-5.45,0.62-8.34c3.65-1.86,8.09-2.58,10.89-6.7
+        c-4.93-1.67-8.11-4.71-10.62-8.55c-2.29-3.51-5.62-5.63-9.52-6.86C7.27,68.01,4.07,67.24,0,66.13c2.69-1.33,4.87-1.79,6.75-3.2
+        c10.91-8.17,21.03-17.21,31.07-26.39c5.53-5.05,12.13-7.07,19.82-5.8c4.31,0.72,8.52,2.17,13.18,1.26
+        c15.11-2.97,30.38-2.59,45.63-1.13c1.68,0.16,3.17,0.21,4.42-1.44c6.62-8.75,15.69-14.8,23.96-21.74
+        C147.55,5.42,151.16,3.87,152.28,0z M69.47,142.47c2.72,6.36,8.01,9.77,12.9,13.45c3.35,2.52,6.93,4.65,11.45,5.16
+        c7.71,0.88,13.44-2.49,18.39-7.64c2.25-2.34,5.84-3.91,6.01-8.79c-8.57,1.35-16.39,4.93-24.88,4.38
+        C84.95,148.5,77.7,143.99,69.47,142.47z M22.04,63.95c5.81,3.56,11.83,4.71,18.24,5.82C35.85,63.18,27.31,60.41,22.04,63.95z
+         M119.73,121.34c7.47,0.48,11.7-3.25,16.12-6.52C130.7,116.28,125.18,116.84,119.73,121.34z M56.06,111.6
+        c2.27,4.5,8.8,8.36,12.82,7.35C64.92,115.59,60.88,113.51,56.06,111.6z M148.26,52.62c0.43,0.08,0.87,0.16,1.3,0.24
+        c2.54-4.76,3.23-9.86,1.46-15.42C150.1,42.51,149.18,47.57,148.26,52.62z"/></g></svg>
+</div><div class='rs-medium rs-large'><h1 class="logo">fatcatmap</h1></div><div class='rs-small'><h1 class="logo">fcm</h1></div></div><!-- end #logowrap -->{%- endblock %}
 
 {% block templates %}
 
