Further fix for logo and adding nice hover to bottom links.

--- a/fatcatmap/assets/sass/core/_common.sass
+++ b/fatcatmap/assets/sass/core/_common.sass
@@ -3,6 +3,9 @@
 @import "mixin/transition"
 @import "mixin/animation"
 
+html
+  -webkit-font-smoothing: subpixel-antialiased
+
 .relative
   position: relative
 
