--- a/fatcatmap/assets/sass/layout/_header.sass
+++ b/fatcatmap/assets/sass/layout/_header.sass
@@ -38,7 +38,6 @@
       color: $grey-dark
 
 #graph_search
-
   input
     width: 15em
     height: 32px
@@ -59,6 +58,9 @@
   top: 10px
   left: 0
   z-index: 9999
+
+  svg
+    width: 1em
 
   h1
     margin-left: 12px
